--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
   </div>
   </section>
   <!--Contact-->
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact__title">Let's talk</h1>
+    <h2 class="contact__email">rapgyung@gmail.com</h2>
+    <div class="contact__links">
+      <a href="https://github.com/G0907" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="#" target="_blank">
+        <i class="fa fa-linkedin-square"></i>
+      </a>
+    </div>
+    <p class="contact__rights">2021 Hoodie - All tights reserved</p>
+  </section>
 </body>
 </html>
