--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <link rel="icon" type="image/png" href="imgs/hoodie.png" />
   <script src="https://kit.fontawesome.com/a90ec94be3.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css"/>
-<script src="main.js" defer></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css"/>
+  <script src="main.js" defer></script>
 </head>
 <body>
   <!--Navbar-->
@@ -24,7 +24,7 @@
       <a href="#">Hoodie</a>
     </div>
     <ul class="navbar__menu">
-      <li class="navbar__menu__item">Home</li>
+      <li class="navbar__menu__item active">Home</li>
       <li class="navbar__menu__item">About</li>
       <li class="navbar__menu__item">Skills</li>
       <li class="navbar__menu__item">My Work</li>
