--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       />
       <h1 class="home_title">Hello, <br />I'm Hoodie</h1>
       <h2 class="home_description"></h2>
-      <button class="home__contact">Conatact Me</button>
+      <button class="home__contact">Contact Me</button>
 
   </Section>
   <!--About-->
