--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       <li class="navbar__menu__item">Contact</li>
       </ul>
   </nav>
+
+  <!-- Toggle button -->
+  <button class="navbar__toggle-btn">
+    <i class="fa-solid fa-bars"></i>
+  </button>
+
   <!--Home-->
   <Section id="home">
     <img 
@@ -41,6 +47,7 @@
       <h1 class="home_title">Hello, <br />I'm Hoodie</h1>
       <h2 class="home_description"></h2>
       <button class="home__contact">Contact Me</button>
+  </div>
 
   </Section>
   <!--About-->
@@ -54,44 +61,25 @@
         <div class="major__icon">
           <i class="fab fa-html5"></i>
         </div>
-      <div class="major__title">HTML</div>
+      <h2 class="major__title">HTML</h2>
       <div class="major__description">
-
       </div>
     </div>
-    <div class="about__jobs">
-      <div class="job">
-        <div class="major__icon">
-          <i class="fa-brands fa-css3"></i>
-        </div>
+    <div class="major">
+      <div class="major__icon">
+        <i class="fab fa-css3"></i>
+      </div>
       <h2 class="major__title">CSS</h2>
       <p class="major__description">
-
       </p>
     </div>
     <div class="major">
       <div class="major__icon">
-        <div class="major__icon">
-          <i class="fa-brands fa-js"></i>
+          <i class="fab fa-js"></i>
         </div>
       <h2 class="major__title">JavaScript</h2>
       <p class="major__description">
-
       </p>
-    </div>
-  </div>
-  <div class="about__jobs">
-    <div class="job">
-      <img
-        src="imgs/jobs/logo-samsung.png"
-        alt="samsung"
-        class="job_logo"
-      />
-    <div class="job__description">
-      <p class="job__name">
-
-      </p>
-      <p class="job__period"></p>
     </div>
   </div>
   </section>
@@ -101,9 +89,6 @@
     <div class="section__container"></div>
       <h1>Skills</h1>
       <h2>Skills & Attribute</h2>
-      <p>
-      skill
-      </p>
     <div class="skillset">
       <div class="skillset__left">
         <h3 class="Skillset__title">Skills</h3>
@@ -115,8 +100,6 @@
           <div class="skill__bar">
             <div class="skill__value" style="width: 90%;"></div>
           </div>
-          <div class="tools">
-          </div>
         <div class="skill">
           <div class="skill__description">
             <span>CSS</span>
@@ -125,8 +108,6 @@
           <div class="skill__bar">
             <div class="skill__value" style="width: 90%"></div>
           </div>
-          <div class="tools">
-          </div>
           <div class="Skill">
             <div class="skill__description">
               <span>JavaScript</span>
@@ -134,16 +115,25 @@
             </div>
             <div class="skill__bar">
               <div class="skill__value" style="width: 90%;"></div>
+              </div>
             </div>
+            <div class="skillset__right">
             <div class="tools">
-            </div>
-          <div class="etc">
-          <h3 class="Skillset_title">Etc</h3>
-          <ul class="etc__list">
-            <li><span>Git</span></li>
+              <h3 class="skillset__title">Tools</h3>
+              <ul class="tools__list">
+                <li><span>Visual Studio Code</span></li>
+                <li><span>Git</span></li>
+                <li><span>Git Hub</span></li>
+              </ul>
+              </div>
+            <div class="etc">
+             <h3 class="Skillset_title">Etc</h3>
+              <ul class="etc__list">
+              <li><span>English reading </span></li>
           </ul>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -189,7 +179,7 @@
           <i class="fa fa-linkedin-square"></i>
         </a>
       </div>
-      <p class="contact__rights">2021 Hoodie - All tights reserved</p>
+      <p class="contact__rights">2022 Hoodie - All tights reserved</p>
     </div>
   </section>
 </body>
