--- a/index.html
+++ b/index.html
@@ -23,38 +23,39 @@
       <i class="fab fa-diaspora"></i>
       <a href="#">Hoodie</a>
     </div>
-    <ul class="navbar__menu">
-      <li class="navbar__menu__item active">Home</li>
-      <li class="navbar__menu__item">About</li>
-      <li class="navbar__menu__item">Skills</li>
-      <li class="navbar__menu__item">My Work</li>
-      <li class="navbar__menu__item">Contact</li>
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#about">About</li>
+        <li class="navbar__menu__item" data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work">My Work</li>
+        <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>
-  </nav>
-
   <!-- Toggle button -->
   <button class="navbar__toggle-btn">
-    <i class="fa-solid fa-bars"></i>
+    <i class="fas fa-bars"></i>
   </button>
+  </nav>
 
   <!--Home-->
   <Section id="home">
-    <img 
-      src="imgs/profile.png" 
-      alt="Hoodie's profile" 
-      class="home__avatar"
-      />
-      <h1 class="home_title">Hello, <br />I'm Hoodie</h1>
-      <h2 class="home_description"></h2>
+      <h1 class="home__title">Hello, <br />I'm Hoodie</h1>
+      <h2 class="home__description"></h2>
       <button class="home__contact">Contact Me</button>
   </div>
 
   </Section>
   <!--About-->
   <section id="about" class="section section__container">
-    <h1>About me</h1>
+    <img 
+      src="imgs/profile.png" 
+      alt="Hoodie's profile" 
+      class="home__avatar"
+      />
+    <h1>안녕하세요! <br> 최혜경 입니다.</h1>
     <p>
-      main text
+      저는 쉽고, 재미있는 페이지를 구현하는 것을 좋아합니다.<br>
+      감각적이지만 사용자 친화적인 UI, 유지보수에 최적화된 마크업에 관심이 많습니다. <br>
+      무엇보다, 기억에 남는 프로덕트가 가장 중요하다고 생각합니다.
     </p>
     <div class="about__majors">
       <div class="major">
@@ -62,6 +63,7 @@
           <i class="fab fa-html5"></i>
         </div>
       <h2 class="major__title">HTML</h2>
+      <p>웹 표준 및 웹 접근성을 준수하여 제작합니다.</p>
       <div class="major__description">
       </div>
     </div>
@@ -70,6 +72,7 @@
         <i class="fab fa-css3"></i>
       </div>
       <h2 class="major__title">CSS</h2>
+      <p>반응형 레이아웃과 호환성에 중심을 둡니다.</p>
       <p class="major__description">
       </p>
     </div>
@@ -89,51 +92,49 @@
     <div class="section__container"></div>
       <h1>Skills</h1>
       <h2>Skills & Attribute</h2>
-    <div class="skillset">
-      <div class="skillset__left">
-        <h3 class="Skillset__title">Skills</h3>
-        <div class="Skill">
-          <div class="skill__description">
-            <span>HTML</span>
-            <span>90%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value" style="width: 90%;"></div>
-          </div>
-        <div class="skill">
-          <div class="skill__description">
-            <span>CSS</span>
-            <span>90%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value" style="width: 90%"></div>
-          </div>
-          <div class="Skill">
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">Skills</h3>
+          <div class="skill">
             <div class="skill__description">
-              <span>JavaScript</span>
-              <span>50%</span>
+              <span>HTML</span>
             </div>
             <div class="skill__bar">
-              <div class="skill__value" style="width: 90%;"></div>
-              </div>
+              <div class="skill__value" style="width: 95%;"></div>
             </div>
-            <div class="skillset__right">
-            <div class="tools">
-              <h3 class="skillset__title">Tools</h3>
-              <ul class="tools__list">
-                <li><span>Visual Studio Code</span></li>
-                <li><span>Git</span></li>
-                <li><span>Git Hub</span></li>
-              </ul>
-              </div>
-            <div class="etc">
-             <h3 class="Skillset_title">Etc</h3>
-              <ul class="etc__list">
-              <li><span>English reading </span></li>
-          </ul>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>CSS</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 85%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>JavaScript</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 70%;"></div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li><span>Git</span></li>
+              <li><span>English reading</span></li>
+            </ul>
+          </div>
+        </div>
     </div>
   </section>
 
@@ -156,7 +157,7 @@
         class="project__img"
         data-type="backend"
       >
-      <img src="imgs/projects/youtube.png"      alt="Yotube">
+      <img src="imgs/projects/youtube.png" alt="Yotube">
       <div class="project__description">
         <h3>Youtube Site</h3>
         <span>Clone coding with HTML and CSS</span>
