--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
         <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>
   <!-- Toggle button -->
-  <button class="navbar__toggle-btn">
-    <i class="fas fa-bars"></i>
-  </button>
+    <button class="navbar__toggle-btn">
+      <i class="fas fa-bars"></i>
+    </button>
   </nav>
 
   <!--Home-->
   <Section id="home">
+    <div class="home__container">
       <h1 class="home__title">Hello, <br />I'm Hoodie</h1>
       <h2 class="home__description"></h2>
-      <button class="home__contact">Contact Me</button>
+      <button class="home__contact" data-link="#contact">Contact Me</button>
   </div>
-
   </Section>
   <!--About-->
   <section id="about" class="section section__container">
@@ -140,23 +140,18 @@
 
   <!--Work-->
   <section id="work" class="section">
-    <div class="sectio_container">
+    <div class="section__container">
       <h1>My work</h1>
-    <h3>Projects</h3>
-    <div class="work__categories">
-      <button class="category__btn active">1<span class="category__count">8</span></button>
-      <button class="category__btn">2<span class="category__count">3</span></button>
-      <button class="category__btn">3<span class="category__count">3</span></button>
-      <button class="category__btn">4<span class="category__count">2</span></button>
-    </div>
+      <h3>Projects</h3>
+      <div class="work__categories">
+        <button class="category__btn active">1<span class="category__count">8</span></button>
+        <button class="category__btn">2<span class="category__count">3</span></button>
+        <button class="category__btn">3<span class="category__count">3</span></button>
+        <button class="category__btn">4<span class="category__count">2</span></button>
+      </div>
   </section>  
 
     <div class="work__projects">
-      <a
-        href="https://github.com/"
-        class="project__img"
-        data-type="backend"
-      >
       <img src="imgs/projects/youtube.png" alt="Yotube">
       <div class="project__description">
         <h3>Youtube Site</h3>
