--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       <h1 class="home__title">Hello, <br />I'm Hoodie</h1>
       <h2 class="home__description"></h2>
       <button class="home__contact" data-link="#contact">Contact Me</button>
-  </div>
+    </div>
   </Section>
+
   <!--About-->
   <section id="about" class="section section__container">
     <img 
@@ -178,5 +179,10 @@
       <p class="contact__rights">2022 Hoodie - All tights reserved</p>
     </div>
   </section>
-</body>
+
+<!--Arrow up-->
+  <button class="arrow-up">
+    <i class="fas fa-chevron-up"></i>
+  </button>
+  </body>
 </html>
