JS: Work filter

--- a/index.html
+++ b/index.html
@@ -145,15 +145,16 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn active">1<span class="category__count">8</span></button>
-        <button class="category__btn">2<span class="category__count">3</span></button>
-        <button class="category__btn">3<span class="category__count">3</span></button>
-        <button class="category__btn">4<span class="category__count">2</span></button>
+        <button class="category__btn active" data-filter="1">1<span class="category__count">8</span></button>
+        <button class="category__btn" data-filter="2">2<span class="category__count">3</span></button>
+        <button class="category__btn" data-filter="3">3<span class="category__count">3</span></button>
+        <button class="category__btn" data-filter="4">4<span class="category__count">2</span></button>
       </div>
   </section>  
 
     <div class="work__projects">
-      <img src="imgs/projects/youtube.png" alt="Yotube">
+      <a href="" class="project" target="blank" data-type="front-end"></a>
+      <img src="imgs/projects/youtube.png" alt="Yotube" class="project__img" />
       <div class="project__description">
         <h3>Youtube Site</h3>
         <span>Clone coding with HTML and CSS</span>
