--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <i class="fab fa-html5"></i>
         </div>
       <h2 class="major__title">HTML</h2>
-      <p>웹 표준 및 웹 접근성을 준수하여 제작합니다.</p>
+      <p>웹 표준 및 웹 접근성을 준수하여 마크업합니다.</p>
       <div class="major__description">
       </div>
     </div>
@@ -73,7 +73,7 @@
         <i class="fab fa-css3"></i>
       </div>
       <h2 class="major__title">CSS</h2>
-      <p>반응형 레이아웃과 호환성에 중심을 둡니다.</p>
+      <p>미디어 쿼리를 활용하여 반응형 레이아웃과 호환성에 중심을 둔 웹을 제작합니다.</p>
       <p class="major__description">
       </p>
     </div>
