--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="home__container">
       <h1 class="home__title">Hello, <br />I'm Hoodie</h1>
       <h2 class="home__description"></h2>
-      <button class="home__contact" data-link="#contact">RESUME</button>
+      <button class="home__contact" onclick="window.open('https://hoodiez.notion.site/78caabdbf51d4045a7d3e6484036f0f2')">RESUME</button>
     </div>
   </Section>
 
@@ -106,8 +106,8 @@
         <a href="https://www.instagram.com/hoodie9x7/" target="_blank">
           <i class="fa fa-instagram"></i>
         </a>
-        <a href="https://github.com/G0907" target="_blank">
-          <i class="fab fa-github"></i>
+        <a href="https://g0907.github.io/" target="_blank">
+          <i class="fa-solid fa-n"></i>
       </div>
       <p class="contact__rights">© 2022 Hoodie</p>
     </div>
