--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
   <section id="work" class="section">
     <h1>My work</h1>
     <div class="section__container1_left">
+      <a href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
+      target="_blank">
       <img 
         src="imgs/cleanme_main.svg"
-        class="cleanme"/>
+        class="cleanme"
+        />
+        </a>
     </div>
     <div class="section__container1_right">
       CleanMe
