--- a/index.html
+++ b/index.html
@@ -78,19 +78,32 @@
 
   <!--Work-->
   <section id="work" class="section">
-    <h1>My work</h1>
-    <div class="section__container1_left">
-      <a href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
-      target="_blank">
+    
+    <div class="wrap">
+      <a 
+        href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
+        target="_blank">
       <img 
-        src="imgs/cleanme_main.svg"
-        class="cleanme"
+        src="imgs/projects/Slide 16_9 - 1.jpg"
+        class="slidepic"
         />
         </a>
-    </div>
-    <div class="section__container1_right">
-      CleanMe
-    </div>
+        <a 
+        href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
+        target="_blank">
+      <img 
+        src="imgs/projects/Slide 16_9 - 3.jpg"
+        class="slidepic"
+        />
+        </a>
+        <a 
+        href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
+        target="_blank">
+      <img 
+        src="imgs/projects/Slide 16_9 - 2.png"
+        class="slidepic"
+        />
+        </a>
   </section>  
 
     <div class="work__projects">
