--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         class="slidepic"
         />
         </a>
-        <a 
+      <a 
         href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
         target="_blank">
       <img 
@@ -130,7 +130,7 @@
         class="slidepic"
         />
         </a>
-        <a 
+      <a 
         href="https://hoodiez.notion.site/APP-30220ce997d64c8bb64664e0b624162e"
         target="_blank">
       <img 
@@ -138,21 +138,14 @@
         class="slidepic"
         />
         </a>
-        <script type="text/javascript" src="./instafeed.min.js"></script>
-
-<script type="text/javascript">
-const feed = new Instafeed({
-    accessToken: 'IGQVJXRGJzVGRzYV92RXE0QUJ0d0kycmNqczdMei1BSFFsRTZAXN2NiX2J2V2dXaG5ubjZAKTlVOOTdvUkpvLTJ6RXc3NEMyM0dnakJXQlRvTDdsSTFHeThGSFUxemZAlZAVFDdkJWZAGE4UlIyVHZASM2VIMAZDZD',
-    target:'gallery',
-    template: '<li class="item">'+
-      '<a href="{{link}}">'+
-      '<img title="{{caption}}" src="{{image}}"/>'+
-	  '<h3>{{caption}}</h3>'+
-	  '<div>{{username}}</div>'+
-	  '</a>'+
-	  '</li>'
-});
-feed.run();
+      <a 
+        href="https://www.instagram.com/hoodie.ux/"
+        target="_blank">
+      <img 
+        src="imgs/projects/Slide 16_9 - 4.png"
+        class="slidepic"
+        />
+        </a>
 
 </script>
     </div>
@@ -177,7 +170,7 @@ feed.run();
         <a href="https://g0907.github.io/" target="_blank">
           <i class="fa-solid fa-n"></i>
       </div>
-      <p class="contact__rights">© 2022 Hoodie</p>
+      <p class="contact__rights">© 2023 Hoodie</p>
     </div>
   </section> 
 
