--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         href="https://hoodiez.notion.site/APP-30220ce997d64c8bb64664e0b624162e"
         target="_blank">
       <img 
-        src="imgs/projects/Slide 16_9 - 2.png"
+        src="imgs/projects/Slide 16_9 - 2.jpg"
         class="slidepic"
         />
         </a>
@@ -142,7 +142,7 @@
         href="https://www.instagram.com/hoodie.ux/"
         target="_blank">
       <img 
-        src="imgs/projects/Slide 16_9 - 4.png"
+        src="imgs/projects/Slide 16_9 - 4.jpg"
         class="slidepic"
         />
         </a>
