--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <!--Work-->
   <section id="projects" class="section">
-    <div class="pin-wrap">
+    <div class="slide">
       <a 
         href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
         target="_blank">
@@ -123,7 +123,7 @@
         />
         </a>
       <a 
-        href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
+        href="https://hoodiez.notion.site/05448e5441804f2ba603b0365141e107"
         target="_blank">
       <img 
         src="imgs/projects/Slide 16_9 - 3.jpg"
@@ -161,7 +161,8 @@
   <section id="contact" class="section">
     <div class="section__container">
       <h1 class="contact__title">Let's talk</h1>
-      <h2 class="contact__email">rapgyung@gmail.com</h2>
+      <h2 class="contact__email">
+        <a href="mailto:rapgyung@gmail.com">rapgyung@gmail.com</a></h2>
       <div class="contact__links">
 
         <a href="https://www.instagram.com/hoodie9x7/" target="_blank">
@@ -169,6 +170,7 @@
         </a>
         <a href="https://g0907.github.io/" target="_blank">
           <i class="fa-solid fa-n"></i>
+        </a>
       </div>
       <p class="contact__rights">© 2023 Hoodie</p>
     </div>
