--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
       <a 
         href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
         target="_blank">
-      <img 
-        src="imgs/projects/Slide 16_9 - 1.jpg"
-        class="slidepic"
-        />
-        </a>
+        <img 
+          src="imgs/projects/Slide 16_9 - 1.jpg" 
+          class="slidepic">
+      </a>
       <a 
         href="https://hoodiez.notion.site/05448e5441804f2ba603b0365141e107"
         target="_blank">
@@ -162,7 +161,7 @@
     <div class="section__container">
       <h1 class="contact__title">Let's talk</h1>
       <h2 class="contact__email">
-        <a href="mailto:rapgyung@gmail.com">rapgyung@gmail.com</a></h2>
+        <a href="mailto:rocketeer0907@gmail.com">rocketeer0907@gmail.com</a></h2>
       <div class="contact__links">
 
         <a href="https://www.instagram.com/hoodie9x7/" target="_blank">
