--- a/index.html
+++ b/index.html
@@ -111,57 +111,51 @@
     </div>
   </section>
 
-  <!--Work-->
+  <!--Projects-->
   <section id="projects" class="section">
-    <div class="slide">
+    <h1>PROJECTS</h1>
       <a 
-        href="https://www.notion.so/hoodiez/APP-2c4ea57222f04188b7f184ec2bca2fea"
+        href="https://hoodiez.notion.site/APP-2c4ea57222f04188b7f184ec2bca2fea"
         target="_blank">
-        <img 
-          src="imgs/projects/Slide 16_9 - 1.jpg" 
-          class="slidepic">
+      <img 
+        src="imgs/projects/Slide 16_9 - 1.jpg"
+        class="project_img"
+      />
       </a>
       <a 
         href="https://hoodiez.notion.site/05448e5441804f2ba603b0365141e107"
         target="_blank">
       <img 
         src="imgs/projects/Slide 16_9 - 3.jpg"
-        class="slidepic"
-        />
-        </a>
+        class="project_img"
+      />
+      </a>
       <a 
         href="https://hoodiez.notion.site/APP-30220ce997d64c8bb64664e0b624162e"
         target="_blank">
       <img 
         src="imgs/projects/Slide 16_9 - 2.jpg"
-        class="slidepic"
-        />
-        </a>
+        class="project_img"
+      />
+      </a>
       <a 
         href="https://www.instagram.com/hoodie.ux/"
         target="_blank">
       <img 
         src="imgs/projects/Slide 16_9 - 4.jpg"
-        class="slidepic"
-        />
-        </a>
-
-</script>
+        class="project_img"
+      />
+      </a>
     </div>
-  </section>  
+    </section>
 
-    <div class="work__projects">
-     
-
-    </div>
-  </section>
 
   <!--Contact-->
   <section id="contact" class="section">
     <div class="section__container">
-      <h1 class="contact__title">Let's talk</h1>
-      <h2 class="contact__email">
-        <a href="mailto:rocketeer0907@gmail.com">rocketeer0907@gmail.com</a></h2>
+      <h2 class="contact__title">함께 나누고 싶은 얘기가 있으시다면,</h2>
+      <h1 class="contact__email"></p>
+        <a href="mailto:rocketeer0907@gmail.com">rocketeer0907@gmail.com</a></h1>
       <div class="contact__links">
 
         <a href="https://www.instagram.com/hoodie9x7/" target="_blank">
