--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
       <h2 class="contact__title">함께 나누고 싶은 얘기가 있으시다면,</h2>
       <h1 class="contact__email"></p>
         <a href="mailto:rocketeer0907@gmail.com">rocketeer0907@gmail.com</a></h1>
-      <div class="contact__links">
+      <br>
+    <div class="contact__links">
+      <h2>노션으로 이력서를 자세히 보시기 원하신다면,</h2>
+      <button class="home__contact" 
+              onclick="window.open('https://hoodiez.notion.site/78caabdbf51d4045a7d3e6484036f0f2')">
+              RESUME</button>
 
-        <a href="https://www.instagram.com/hoodie9x7/" target="_blank">
-          <i class="fa fa-instagram"></i>
-        </a>
-        <a href="https://g0907.github.io/" target="_blank">
-          <i class="fa-solid fa-n"></i>
-        </a>
       </div>
+      <br>
       <p class="contact__rights">© 2023 Hoodie</p>
     </div>
   </section> 
