--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
   <section id="projects" class="section">
     <h1>PROJECTS</h1>
       <a 
+        href="https://www.notion.so/EROOM-9bac8de1fefc44f096a6154457bd0bc5?pvs=4"
+        target="_blank">
+      <img 
+        src="imgs/projects/1_intro.jpg"
+        class="project_img"
+      />
+      </a>
+      <a 
         href="https://hoodiez.notion.site/APP-2c4ea57222f04188b7f184ec2bca2fea"
         target="_blank">
       <img 
