--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             Blender<br/>
             Notion<br/>
             Photoshop<br/>
-            Visula Studio Code<br/>
+            Visulal Studio Code<br/>
             Github<br/>
           </div>
         </div>
